--- a/package.json
+++ b/package.json
@@ -2,10 +2,18 @@
   "name": "R7FrontendTest",
   "version": "0.0.1",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "gulp": "gulp"
   },
   "dependencies": {
+    "browser-sync": "^2.26.14",
     "connect": "~3.1.1",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-sass": "^4.1.0",
+    "gulp-uglify": "^3.0.2",
+    "sass": "^1.32.12",
     "serve-static": "~1.5.3"
   }
 }
